# Projet-PF-Ocaml

./: .gitignore  AUTHORS  README  dune-project
src/hello/: hello_module.ml
src/mariages_stables/: algo_abstrait.ml  dune  gale_shapley.ml  knuth.ml
src/parcoursup/: api.ml  api.mli
test/mariages_stables/: dune  exemple.ml
test/mariages_stables/algo_abstrait/: dune  test_algo_abstrait.expected  test_algo_abstrait.ml  test_algo_abstrait2.expected  test_algo_abstrait2.ml
test/mariages_stables/gale_shapley/: dune  test_gale_shapley.expected  test_gale_shapley.ml
test/mariages_stables/knuth/: dune  test_knuth.expected  test_knuth.ml
test/mariages_stables/pioche/: dune  testeur.ml
test/mariages_stables/pioche/file/: dune  test_file.expected  test_file.ml
test/mariages_stables/pioche/pile/: dune  test_pile.expected  test_pile.ml
test/parcoursup/: dune  test_parcoursup1.expected  test_parcoursup1.ml  test_parcoursup2.expected  test_parcoursup2.ml  test_parcoursup3.expected  test_parcoursup3.ml  test_parcoursup_utils.ml
test_perso/: dune  test_perso_parcoursup1.expected  test_perso_parcoursup1.ml  test_perso_parcoursup2.expected  test_perso_parcoursup2.ml  test_perso_parcoursup3.expected  test_perso_parcoursup3.ml  test_perso_parcoursup4.expected  test_perso_parcoursup4.ml  test_perso_parcoursup_utils.ml
